# fraud-detection-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
fraud_detection_mlops/: main.py
fraud_detection_mlops/configs/: aws.yaml  evaluation_gate.yaml  model.yaml  monitoring.yaml  serving.yaml  settings.py  training.yaml
fraud_detection_mlops/data/: __init__.py
fraud_detection_mlops/data/pipelines/: prepare.py  split_strategy.py
fraud_detection_mlops/data/validation/: expectations.py  validator.py
fraud_detection_mlops/scripts/: deploy_sagemaker.py  upload_artifacts.py  verify_deployment.py
fraud_detection_mlops/serving/: Dockerfile
fraud_detection_mlops/serving/api/: main.py  predictor.py  schemas.py
fraud_detection_mlops/training/: evaluate.py  evaluation_gate.py  train.py
fraud_detection_mlops/training/features/: feature_eng.py
fraud_detection_mlops/training/models/: base_model.py  xgb_model.py
models/: feature_pipeline.joblib  model.joblib
tests/integration/: test_training_pipeline.py
tests/unit/: test_api.py  test_evaluate.py  test_feature_eng.py  test_predictor.py  test_schemas.py  test_settings.py  test_split_strategy.py  test_validator.py
validation_reports/: raw_data_validation_report.txt
