[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "Production ML system for real-time fraud detection"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "boto3>=1.34.0",
    "s3fs>=2024.1.0",
    # Validation
    "great-expectations>=0.18.0",
    # Feature store
    "feast[aws]>=0.36.0",
    "redis>=5.0.0",
    # Training
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.12.0",
    "optuna>=3.5.0",
    # Experiment tracking
    "mlflow>=2.10.0",
    # Serving
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "prometheus-client>=0.19.0",
    # Monitoring
    "evidently>=0.4.0",
    "scipy>=1.12.0",
    # Orchestration
    "apache-airflow>=2.8.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"

[tool.hatch.build.targets.wheel]
packages = ["fraud_detection_mlops"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
